# LineBot_KY_Manager

./: README.md  app.py  pyproject.toml  requirements.txt
static/css/: style.min.css
static/js/: basic_v1_0_3.js  main.js  main.min.js
templates/: index.html
